Fix bug 108046 "DNSService Shutdown uses getService; suggest registering WeakPtr". r=dougt, sr=darin.